# bitcoin-core-clang-plugin

./: CMakeLists.txt  CheckStringNewline.cpp  PropagateEarlyExit.cpp  README.md  example_newline.cpp
